# KeiRo

./: .gitignore  CMakeLists.txt  README.md  download.sh
Base/: CMakeLists.txt
Base/src/: Base.cpp  Base.h  Color.cpp  Color.h  Common.cpp  Common.h  Config.cpp  Config.h  Coord2.cpp  Coord2.h  Edge2.cpp  Edge2.h  Line2.cpp  Line2.h  Object.cpp  Object.h  Polygon2.cpp  Polygon2.h  Rectangle2.cpp  Rectangle2.h  Timer.h
Composite/: CMakeLists.txt
Composite/src/: Compression.cpp  Compression.h  CompressionGrid.cpp  CompressionGrid.h  Contour2.cpp  Contour2.h  Grid2.cpp  Grid2.h
FileIO/: CMakeLists.txt
FileIO/src/: graphml.cpp  graphml.h  metadata.cpp  metadata.h  sbgn.cpp  sbgn.h  sbml.cpp  sbml.h  svg.cpp  svg.h  xml.cpp  xml.h
Geometry/: CMakeLists.txt
Geometry/src/: Seed.h  Voronoi.cpp  Voronoi.h
Graph/: CMakeLists.txt
Graph/src/: BaseDirectedGraph.cpp  BaseDirectedGraph.h  BaseEdgeProperty.h  BaseGraphProperty.h  BaseUndirectedGraph.cpp  BaseUndirectedGraph.h  BaseVertexProperty.h  BoundaryEdgeProperty.cpp  BoundaryEdgeProperty.h  BoundaryGraph.cpp  BoundaryGraph.h  BoundaryGraphProperty.cpp  BoundaryGraphProperty.h  BoundaryVertexProperty.cpp  BoundaryVertexProperty.h  GridEdgeProperty.cpp  GridEdgeProperty.h  GridGraph.cpp  GridGraph.h  GridGraphProperty.cpp  GridGraphProperty.h  GridVertexProperty.cpp  GridVertexProperty.h  PropertyGraph.h  SchematicEdgeProperty.cpp  SchematicEdgeProperty.h  SchematicGraph.cpp  SchematicGraph.h  SchematicGraphProperty.cpp  SchematicGraphProperty.h  SchematicVertexProperty.cpp  SchematicVertexProperty.h  TreeDirectedGraph.cpp  TreeDirectedGraph.h  TreeEdgeProperty.cpp  TreeEdgeProperty.h  TreeGraph.cpp  TreeGraph.h  TreeGraphProperty.cpp  TreeGraphProperty.h  (+2 more)
Harmony/: download.mk
Lens/: CMakeLists.txt  main.cpp
Lens/core/: Lens.cpp  Lens.h
Metabopolis/: download.mk
Optimization/: CMakeLists.txt
Optimization/src/: LaplacianOptimization.cpp  LaplacianOptimization.h  Schematization.cpp  Schematization.h
UI/: CMakeLists.txt
UI/src/: GraphicsBallItem.cpp  GraphicsBallItem.h  GraphicsBase.cpp  GraphicsBase.h  GraphicsCellItem.cpp  GraphicsCellItem.h  GraphicsEdgeItem.cpp  GraphicsEdgeItem.h  GraphicsPathItem.cpp  GraphicsPathItem.h  GraphicsPolygonItem.cpp  GraphicsPolygonItem.h  GraphicsVertexItem.cpp  GraphicsVertexItem.h  GraphicsView.cpp  GraphicsView.h  MainWindow.cpp  MainWindow.h
config/: MainWindow.conf
resources/: ui.qrc
